<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>jguid</artifactId>
        <groupId>com.lcydream.project</groupId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>concurrent</artifactId>

    <properties>
        <maven.compiler.target>16</maven.compiler.target>
        <maven.compiler.source>16</maven.compiler.source>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
            <version>9.4.31.v20200723</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>30.0-jre</version>
        </dependency>

        <dependency>
            <groupId>com.lmax</groupId>
            <artifactId>disruptor</artifactId>
            <version>3.4.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <parameters>true</parameters>
                    <release>16</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <source>16</source>
                    <target>16</target>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmArguments>--enable-preview -DvirtualThreads=true</jvmArguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!--<build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.3.4.RELEASE</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.2.3</version>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <parameters>true</parameters>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>14</source>
                    <target>14</target>
                </configuration>
            </plugin>
            &lt;!&ndash; Tomcat 8 Maven 插件用于构建可执行 war &ndash;&gt;
            &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.tomcat.maven/tomcat8-maven-plugin &ndash;&gt;
            &lt;!&ndash;<plugin>
                &lt;!&ndash;<groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat8-maven-plugin</artifactId>
                <version>3.0-r1655215</version>&ndash;&gt;
                <groupId>ds2.tools.maven.plugins</groupId>
                <artifactId>embedded-tomcat8-maven-plugin</artifactId>
                <version>0.1.2</version>
                <executions>
                    <execution>
                        <id>tomcat-run</id>
                        <goals>
                            &lt;!&ndash; 最终打包成可执行的jar包 &ndash;&gt;
                            &lt;!&ndash;<goal>exec-war-only</goal>&ndash;&gt;
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            &lt;!&ndash; ServletContext 路径 &ndash;&gt;
                            <path>/</path>
                        </configuration>
                    </execution>
                </executions>
            </plugin>&ndash;&gt;
        </plugins>
    </build>-->
</project>